# gvio

./: .clang-format  .gitignore  .valgrind-suppression  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  TODO
cmake/: GetGtest.cmake
configs/gimbal/: config.yaml
configs/recorder/: config.yaml
docs/html/: CMakeCXXCompilerId_8cpp.html  annotated.html  annotated_dup.js  apriltag_8hpp.html  apriltag_8hpp_source.html  base__detector_8cpp.html  base__detector_8hpp.html  base__detector_8hpp_source.html  blackbox_8cpp.html  blackbox_8hpp.html  blackbox_8hpp_source.html  calib_8cpp.html  calib_8hpp.html  calib_8hpp_source.html  calib__test_8cpp.html  calib__test_8cpp.js  calibration_8hpp.html  calibration_8hpp_source.html  camera_2config_8cpp.html  camera_2config_8hpp.html  camera_2config_8hpp_source.html  camera_2config__test_8cpp.html  camera_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  camera__config_8cpp.html  camera__config_8hpp.html  camera__config_8hpp_source.html  camera__config__test_8cpp.html  camera__config__test_8cpp.js  camera__model_8hpp.html  camera__model_8hpp_source.html  camera__state_8cpp.html  camera__state_8hpp.html  camera__state_8hpp_source.html  camera__state__test_8cpp.html  camera__test_8cpp.html  camera__test_8cpp.js  ceres_8hpp.html  ceres_8hpp_source.html  (+683 more)
docs/style/: Doxyfile  doxy-boot.js  layout.xml
experiments/: bundle_adjustment_benchmark.cpp  euroc_runner.cpp  feature_tracker_benchmarker.cpp  kitti_runner.cpp  sim_runner.cpp  tracker_benchmark.cpp
experiments/configs/: kitti_raw_2011_09_26_0005.yaml  kitti_raw_2011_09_26_0009.yaml  msckf_euroc_V01_01_easy.yaml  msckf_kitti_raw-2011_09_26-0005.yaml  msckf_sim.yaml  sim.yaml
experiments/scripts/: plot_euroc_dataset.py  plot_grid_fast_results.py  plot_msckf.py  plot_sim.py  plot_tracker_stats.py
include/gvio/: gvio.hpp  gvio_test.hpp  munit.h  munit.hpp
scripts/: aprilgrid_extractor.py  bag2vid.py  euroc_mav_dataset.bash  euroc_mav_datasets.bash  gimbal.py  msckf_tuner.py  run.sh  run_cameras.sh
scripts/benchmark/: msckf_tuner.py
scripts/calibration/: allan_variance.py  aprilgrid_extractor.py  calibrate_equi.py  convert2gvio.py  convert2jason.py  plot_gimbal.py  prep_data.py
scripts/data/: euroc_mav_dataset.bash  kitti_raw_data_downloader.bash
scripts/install/: apriltags_michigan_install.bash  apriltags_mit_install.bash  apriltags_swathmore_install.bash  ceres_install.bash  install_deps.bash  kalibr_install.bash  opencv3_install.bash  suitesparse_install.bash  ueye-sdk_install.bash  ueye_sdk_install.bash  yaml-cpp_install.bash
scripts/maths/: illum_invar.py  jpl_quaternion.py  mageck.py  matrix_diff.py  skew_symmetric_finite_difference.py  test.py  transforms.py
scripts/plot/: autorun.py  autoserve.py  index.html  plot_fig.py  plot_landmarks.py  plot_rosbag.py
scripts/ros/: addtime2topic.py  bag2imgs.py  ds2vid.py
scripts/test/: test_runner.sh
src/apriltag/: base_detector.cpp  michigan.cpp  mit.cpp
src/calibration/: aprilgrid.cpp  calib_data.cpp  calib_params.cpp  calib_preprocessor.cpp  calib_validator.cpp  camchain.cpp  camera_property.cpp  chessboard.cpp  gimbal_calib.cpp  residual.cpp  simulation.cpp  stereo_calib.cpp
src/camera/: camera.cpp  camera_config.cpp  config.cpp  distortion.cpp  ids.cpp  pinhole_model.cpp
src/ceres/: jpl_quaternion_parameterization.cpp
src/control/: carrot_controller.cpp  pid.cpp
src/driver/: i2c.cpp  uart.cpp
src/estimation/: camera_state.cpp  imu_state.cpp
src/euroc/: mav_dataset.cpp
src/feature/: feature_tracker.cpp
src/feature2d/: draw.cpp  feature.cpp  feature_container.cpp  feature_track.cpp  feature_tracker.cpp  gms_matcher.cpp  grid_fast.cpp  klt_tracker.cpp  orb_tracker.cpp  stereo_klt_tracker.cpp  stereo_orb_tracker.cpp  stereo_tracker.cpp
src/gimbal/: calibration.cpp  gimbal.cpp  gimbal_model.cpp  saliency.cpp  sbgc.cpp
src/imu/: imu.cpp  imu_base.cpp  mpu6050.cpp  mpu9250.cpp
src/kitti/: raw.cpp
src/msckf/: blackbox.cpp  camera_state.cpp  feature_estimator.cpp  imu_state.cpp  msckf.cpp  profiler.cpp
src/pwm/: pca9685.cpp
src/quadrotor/: mission.cpp  quadrotor_model.cpp
src/quaternion/: jpl.cpp
src/sim/: camera.cpp  camera_motion.cpp  carrot_controller.cpp  pid.cpp  quadrotor.cpp  sim_world.cpp  twowheel.cpp  virtual_camera.cpp  world.cpp
src/util/: config.cpp  data.cpp  euler.cpp  file.cpp  gps.cpp  linalg.cpp  math.cpp  opencv.cpp  stats.cpp  time.cpp  vision.cpp
tests/: template_test.cpp
tests/apriltag/: mit_test.cpp
tests/calibration/: aprilgrid_test.cpp  calib_data_test.cpp  calib_params_test.cpp  calib_preprocessor_test.cpp  calib_validator_test.cpp  chessboard_test.cpp  gimbal_calib_test.cpp  residual_test.cpp  stereo_calib_test.cpp
tests/camera/: camera_config_test.cpp  camera_test.cpp  config_test.cpp  ids_test.cpp  pinhole_model_test.cpp
tests/control/: carrot_controller_test.cpp  pid_test.cpp
tests/euroc/: mav_dataset_test.cpp
tests/feature/: feature_tracker_test.cpp
tests/feature2d/: feature_container_test.cpp  feature_test.cpp  feature_track_test.cpp  feature_tracker_test.cpp  gms_matcher_test.cpp  grid_fast_test.cpp  klt_tracker_test.cpp  orb_tracker_test.cpp  stereo_klt_tracker_test.cpp  stereo_orb_tracker_test.cpp  stereo_tracker_test.cpp
tests/gimbal/: gimbal_test.cpp  saliency_test.cpp  sbgc_test.cpp
tests/imu/: mpu6050_test.cpp
tests/kitti/: raw_test.cpp
tests/msckf/: camera_state_test.cpp  feature_estimator_test.cpp  imu_state_test.cpp  msckf_test.cpp  profiler_test.cpp
tests/pwm/: pca9685_test.cpp
tests/quadrotor/: mission_test.cpp  quadrotor_model_test.cpp
tests/scripts/: plot_bezier.py  plot_feature_tracks.py  plot_matrix.py  plot_msckf.py  plot_msckf_blackbox.py  plot_quadrotor.py  plot_sim.py  plot_twowheel.py  plot_world.py
tests/sim/: bezier_test.cpp  camera_motion_test.cpp  camera_test.cpp  carrot_controller_test.cpp  quadrotor_test.cpp  sim_world_test.cpp  twowheel_test.cpp  virtual_camera_test.cpp  (+1 more)
tools/: camera.cpp  imu.cpp  recorder.cpp
utils/: camera.cpp  camera_runner.cpp  imu.cpp  pwm.cpp  recorder.cpp
(+236 files in other folders)
